# lefqm

./: .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  check_tools.sh  pyproject.toml
data/: test.csv  train.csv
lefqm/: __main__.py  commandline_calculation.py  config.ini  conformator.py  conformers.py  constants.py  ensembles.py  gaussian.py  moka.py  nwchem.py  omega.py  shieldings.py  shifts.py  turbomole.py  utils.py  xtb.py
tests/: __init__.py  commandline_calculation_tests.py  conformers_tests.py  main_tests.py  shieldings_tests.py  utils_tests.py
tests/data/: TFA_shieldings.sdf  ensemble_with_shieldings.sdf  mismatched_ensemble_with_shieldings.sdf  mols.csv  mols.smi  mols_with_shieldings.sdf  shieldings.csv  shifts.csv
