[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lefqm"
version = "0.3.1"
authors = [
    {name = "Patrick Penner"},
]
requires-python = ">=3.8"
dependencies = [
   "lefshift>=0.5.0",
   "numpy>=1.23.5",
   "pandas>=1.5.2",
   "rdkit>=2022.09.3",
]

[project.scripts]
lefqm = "lefqm.__main__:main"

[tool.setuptools]
packages = ["lefqm"]
