[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lefqm"
version = "0.4.0"
authors = [
    {name = "Patrick Penner", email = "patrick@ppenner.com"},
]
description = "QM pipeline tools to predict 19F chemical shift"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
   "lefshift>=0.5.0",
   "numpy>=1.23.5",
   "pandas>=1.5.2",
   "rdkit>=2022.09.3",
]

[project.scripts]
lefqm = "lefqm.__main__:main"

[project.urls]
Homepage = "https://github.com/PatrickPenner/lefshift"
Issues = "https://github.com/PatrickPenner/lefshift/issues"

[tool.setuptools]
packages = ["lefqm"]
